force-app/main/default/objects/Employee__c/fields/Attrition__c.field-meta.xml
<CustomField>
    <fullName>Attrition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attrition</label>
    <type>Checkbox</type>
</CustomField>