force-app/main/default/objects/Employee__c/fields/Business_Travel__c.field-meta.xml
<CustomField>
    <fullName>Business_Travel__c</fullName>
    <label>Business Travel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>