force-app/main/default/objects/Employee__c/fields/Distance_From_Home__c.field-meta.xml
<CustomField>
    <fullName>Distance_From_Home__c</fullName>
    <label>Distance From Home</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>