force-app/main/default/objects/Employee__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <length>255</length>
    <type>Text</type>
</CustomField>