force-app/main/default/objects/Employee__c/fields/Education_Field__c.field-meta.xml
<CustomField>
    <fullName>Education_Field__c</fullName>
    <label>Education Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>