force-app/main/default/objects/Employee__c/fields/Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number__c</fullName>
    <label>Employee Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>