force-app/main/default/objects/Employee__c/fields/Environment_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Environment_Satisfaction__c</fullName>
    <label>Environment Satisfaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>