force-app/main/default/objects/Employee__c/fields/Job_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Job_Involvement__c</fullName>
    <label>Job Involvement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>