force-app/main/default/objects/Employee__c/fields/Job_Involvement_textBucket__c.field-meta.xml
<CustomField>
    <fullName>Job_Involvement_textBucket__c</fullName>
    <label>Job Involvement textBucket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>