force-app/main/default/objects/Employee__c/fields/Job_Level__c.field-meta.xml
<CustomField>
    <fullName>Job_Level__c</fullName>
    <label>Job Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>