force-app/main/default/objects/Employee__c/fields/Job_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Job_Satisfaction__c</fullName>
    <label>Job Satisfaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>