force-app/main/default/objects/Employee__c/fields/Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status__c</fullName>
    <label>Marital Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>