force-app/main/default/objects/Employee__c/fields/Num_Companies_Worked__c.field-meta.xml
<CustomField>
    <fullName>Num_Companies_Worked__c</fullName>
    <label>Num Companies Worked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>