force-app/main/default/objects/Employee__c/fields/Over_18__c.field-meta.xml
<CustomField>
    <fullName>Over_18__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Over 18</label>
    <type>Checkbox</type>
</CustomField>