force-app/main/default/objects/Employee__c/fields/Over_Time__c.field-meta.xml
<CustomField>
    <fullName>Over_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Over Time</label>
    <type>Checkbox</type>
</CustomField>