force-app/main/default/objects/Employee__c/fields/Percent_Salary_Hike__c.field-meta.xml
<CustomField>
    <fullName>Percent_Salary_Hike__c</fullName>
    <label>Percent Salary Hike</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>