force-app/main/default/objects/Employee__c/fields/Relationship_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Satisfaction__c</fullName>
    <label>Relationship Satisfaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>