force-app/main/default/objects/Employee__c/fields/Standard_Hours__c.field-meta.xml
<CustomField>
    <fullName>Standard_Hours__c</fullName>
    <label>Standard Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>