force-app/main/default/objects/Employee__c/fields/Stock_Option_Level__c.field-meta.xml
<CustomField>
    <fullName>Stock_Option_Level__c</fullName>
    <label>Stock Option Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>