force-app/main/default/objects/Employee__c/fields/Total_Working_Years__c.field-meta.xml
<CustomField>
    <fullName>Total_Working_Years__c</fullName>
    <label>Total Working Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>