force-app/main/default/objects/Employee__c/fields/Training_Times_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Training_Times_Last_Year__c</fullName>
    <label>Training Times Last Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>