force-app/main/default/objects/Employee__c/fields/Work_Life_Balance__c.field-meta.xml
<CustomField>
    <fullName>Work_Life_Balance__c</fullName>
    <label>Work Life Balance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>