force-app/main/default/objects/Employee__c/fields/Years_At_Company__c.field-meta.xml
<CustomField>
    <fullName>Years_At_Company__c</fullName>
    <label>Years At Company</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>