force-app/main/default/objects/Employee__c/fields/Years_In_Current_Role__c.field-meta.xml
<CustomField>
    <fullName>Years_In_Current_Role__c</fullName>
    <label>Years In Current Role</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>