force-app/main/default/objects/Employee__c/fields/Years_Since_Last_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Years_Since_Last_Promotion__c</fullName>
    <label>Years Since Last Promotion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>