force-app/main/default/objects/Employee__c/fields/Years_With_Curr_Manager__c.field-meta.xml
<CustomField>
    <fullName>Years_With_Curr_Manager__c</fullName>
    <label>Years With Curr Manager</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>